--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-__pycache__/
+.vercel
+*.log
 *.pyc
-.venv/
-.env
-dist/
-build/
-*.egg-info/
-.idea/
-.vscode/
-.DS_Store
-d.bat
-src/main/demo.py
+__pycache__
+
+# Environments 
+.env 
+.venv 
+env/ 
+venv/ 
+ENV/ 
+env.bak/ 
+venv.bak/ 
+.env*.local
