--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "stateshaper"            
 version = "0.1.0"
-description = "Create infinite, deterministic streams of data from a small seed."
+description = "An infinite deterministic token stream derived from just one number."
 readme = "README.md"
 requires-python = ">=3.10"
 license = {file = "LICENSE"}
